--- a/src/componentes/Botao/Botao.css
+++ b/src/componentes/Botao/Botao.css
@@ -1,16 +1,18 @@
 .botao{
-    background-color: #6278f7;
+    background-color: #ef3aff;
     border-radius: 10px;
     font-weight: 700;
     font-size: 18px;
     padding: 32px;
     border: none;
     cursor: pointer;
-    color: hsl(0, 0%, 100%);
+    color: #f2f2f2 ;
     margin: 32px 0;
-    transition: .5s ease;
+    transition: .2s ease;
 }
 
 .botao:hover{
-    background-color: #95ffd4;
+    background-color: #F0D52B;
+    color: #6278f7;
+    padding: 40px;
 }
