--- a/src/componentes/CampoTexto/CampoTexto.css
+++ b/src/componentes/CampoTexto/CampoTexto.css
@@ -6,6 +6,8 @@
     display: block;
     margin-bottom: 8px;
     font-size: 24px;
+    color: white;
+    font-weight: 700;
 }
 
 .campo-texto input{
@@ -16,4 +18,5 @@
     font-size: 24px;
     padding: 24px;
     box-sizing: border-box;
+    border-radius: 8px;
 }
