--- a/src/componentes/Formulario/Formulario.css
+++ b/src/componentes/Formulario/Formulario.css
@@ -1,13 +1,24 @@
 .formulario{
     display: flex;
     justify-content: center;
-    margin: 80px 0;
+    margin: 80px auto;
+    width: 1000px;
 }
 
 .formulario form{
     max-width: 80%;
-    background-color: #f2f2f2;
+    background-color: #6278f7;
     border-radius: 20px;
     padding: 36px 64px;
     box-shadow: 8px 8px 16px rgba(0 ,0 ,0 ,0.6);
+    width: 100%;
+    max-width: 600px;
+}
+
+.formulario h2{
+    text-align: center;
+    text-transform: uppercase;
+    padding-bottom: 10px;
+    color: white;
+    font-weight: 900;
 }
